--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
 				<!-- Title Row -->
 				<div class="row mb-4">
 					<div class="col-12 text-center">
-						<h2 class="section-title">Engineering the Future of Water Solutions Today</h2>
-						<p class="mb-4">We drive the future of water technology through innovative filtration and specialized chemical solutions crafted for today's needs.</p>
+						<h2 class="section-title">Complete Industrial Water Treatment Solutions</h2>
+						<p class="mb-4">Genoasis delivers comprehensive water treatment solutions from RO systems and membrane filtration to chemical treatment and pump technology. Our products power industries across India, UAE, and the Middle East.</p>
 					</div>
 				</div>
 				<!-- Products Row 2 -->
@@ -533,16 +533,19 @@
 		<div class="container pt-2">
 			<div class="row">
 				<div class="col-lg-7">
-					<h2 class="mb-4">Innovative Solutions for a Sustainable Future</h2>
+					<h2 class="mb-4">Innovative Water Treatment Solutions for Industrial Excellence</h2>
 					
-					<p class="mb-4">We are Genoasis. Driven by innovation to transform industries through cutting-edge water treatment, industrial applications, and laboratory solutions. Our dedicated team of experts works tirelessly to deliver sustainable solutions that make a difference in how industries operate and how communities thrive.</p>
+					<p class="mb-4">Genoasis is a leading provider of industrial water treatment solutions across India and the UAE. Our comprehensive range of products includes advanced FRP filters, RO vessels, membrane technologies, industrial pumps, and specialized water treatment chemicals. With offices in Chennai and Dubai, we serve diverse industries including power plants, oil & gas, food processing, pharmaceuticals, and municipal water systems.</p>
 
-					<h3 class="mb-3">Who We Are</h3>
-					<p class="mb-4">At Genoasis, we stand at the forefront of industrial innovation, providing comprehensive solutions in water treatment, industrial processes, and laboratory equipment. From essential water treatment chemicals to advanced filtration systems and high-precision lab equipment, we're committed to delivering excellence that drives industrial progress while protecting our environment.</p>
+					<h3 class="mb-3">Comprehensive Water Treatment Products</h3>
+					<p class="mb-4">Our product portfolio encompasses all aspects of water treatment infrastructure. We supply high-performance RO pressure vessels constructed from fiber-reinforced plastic (FRP) for maximum durability and corrosion resistance. Our membrane products include reverse osmosis, ultrafiltration, and nanofiltration membranes from leading manufacturers. We also provide a complete range of water treatment pumps including centrifugal, submersible, and metering pumps designed for demanding industrial applications.</p>
 
-					<h3 class="mb-3">What We Stand For</h3>
-					<p class="mb-4">Every industrial challenge is an opportunity to innovate and create sustainable solutions. Our decisions, products, and partnerships are guided by our commitment to excellence, environmental responsibility, and the advancement of industrial capabilities.</p>
-					<p><a href="about.html" style="color: #006400; text-decoration: none; font-weight: bold;">Learn More →</a></p>
+					<h3 class="mb-3">Advanced Technologies and Solutions</h3>
+					<p class="mb-4">Genoasis specializes in cutting-edge water treatment technologies including atmospheric water generators, nanobubble systems, and advanced filtration media. Our chemical solutions portfolio includes coagulants, flocculants, biocides, scale inhibitors, and pH adjusters. We also supply essential equipment such as valves, couplings, fittings, filter cartridges, sand media, ion exchange resins, and instrumentation for complete water treatment facilities.</p>
+
+					<h3 class="mb-3">Industrial Expertise and Service</h3>
+					<p class="mb-4">With extensive experience in water treatment for power generation, petrochemical, food & beverage, and wastewater treatment applications, Genoasis provides technical expertise and reliable support. Our team offers comprehensive project management, installation guidance, and ongoing maintenance support. We partner with leading manufacturers including <a href="https://www.festo.com" target="_blank" rel="noopener">Festo</a> for industrial automation solutions and provide dunnage air bags for safe transportation of equipment. Learn about modern water treatment technologies from <a href="https://www.wateronline.com" target="_blank" rel="noopener">Water Online</a> and industrial filtration standards from <a href="https://www.ansi.org" target="_blank" rel="noopener">ANSI</a>.</p>
+					<p><a href="about.html" style="color: #006400; text-decoration: none; font-weight: bold;">Learn More About Genoasis →</a></p>
 				</div>
 				<div class="col-lg-5">
 					<div class="content-images">
@@ -628,8 +631,8 @@
 			<div class="container">
 				<div class="row mb-4">
 					<div class="col-12 text-center">
-						<h2 class="section-title">Industries We Work With</h2>
-						<p class="mb-4">We drive the future of water technology through innovative filtration and specialized chemical solutions crafted for today's needs.</p>
+						<h2 class="section-title">Industries We Serve</h2>
+						<p class="mb-4">Genoasis provides specialized water treatment equipment and chemicals for diverse industrial sectors including power generation, oil refining, food production, municipal utilities, and desalination plants.</p>
 					</div>
 				</div>
 				
@@ -637,8 +640,8 @@
 					<!-- Waste Water Treatment -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/water-industry.png" alt="Water and wastewater treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/water-industry-hover.jpg" alt="Water & Waste Water Treatment Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/water-industry.png" alt="Water and wastewater treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/water-industry-hover.jpg" alt="Water & Waste Water Treatment Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Water & Waste Water Treatment</h4>
 						</div>	
 					</div>
@@ -646,8 +649,8 @@
 					<!-- Oil & Gas Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/oilgas-industry.png" alt="Oil and gas water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/oilgas-industry-hover.jpg" alt="Oil & Gas Industry Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/oilgas-industry.png" alt="Oil and gas water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/oilgas-industry-hover.jpg" alt="Oil & Gas Industry Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Oil & Gas</h4>
 						</div>
 					</div>	
@@ -655,8 +658,8 @@
 					<!-- Power Plant -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/power-plant-industry.png" alt="Power plant water systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/power-plant-industry-hover.jpg" alt="Power Plant Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/power-plant-industry.png" alt="Power plant water systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/power-plant-industry-hover.jpg" alt="Power Plant Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Power Plant</h4>
 						</div>
 					</div>
@@ -664,8 +667,8 @@
 					<!-- Irrigation -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/irrigation-industry.png" alt="Irrigation water solutions supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/irrigation-industry-hover.jpg" alt="Irrigation Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/irrigation-industry.png" alt="Irrigation water solutions supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/irrigation-industry-hover.jpg" alt="Irrigation Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Irrigation</h4>
 						</div>
 					</div>
@@ -673,8 +676,8 @@
 					<!-- Food Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/food-industry.png" alt="Food industry water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/food-industry-hover.png" alt="Food Industry Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/food-industry.png" alt="Food industry water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/food-industry-hover.png" alt="Food Industry Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Food</h4>
 						</div>
 					</div>
@@ -682,16 +685,16 @@
 					<!-- Desalination -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/desalination-industry.png" alt="Desalination systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/desalination-industry-hover.jpg" alt="Desalination Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/desalination-industry.png" alt="Desalination systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/desalination-industry-hover.jpg" alt="Desalination Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Desalination</h4>
 						</div>
 					</div>
 					<!-- Paper Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/paper-industry.png" alt="Paper industry water systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/paper-industry-hover.jpg" alt="Paper Industry Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/paper-industry.png" alt="Paper industry water systems supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/paper-industry-hover.jpg" alt="Paper Industry Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Paper</h4>
 						</div>
 					</div>
@@ -699,8 +702,8 @@
 					<!-- Process Industry -->
 					<div class="col-md-3 col-sm-6 mb-4">
 						<div class="industry-item">
-								<img src="images/process-industry.png" alt="Process industry water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" loading="lazy" width="80" height="80">
-							<img src="images/process-industry-hover.jpg" alt="Process Industry Details" class="img-fluid industry-hover" loading="lazy" loading="lazy" width="200" height="200">
+								<img src="images/process-industry.png" alt="Process industry water treatment supplier India UAE" class="img-fluid industry-icon" loading="lazy" width="80" height="80">
+							<img src="images/process-industry-hover.jpg" alt="Process Industry Details" class="img-fluid industry-hover" loading="lazy" width="200" height="200">
 							<h4 class="text-center mt-2">Process</h4>
 						</div>
 					</div>
@@ -721,10 +724,10 @@
 						</div>							
 						<p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p>
 						<ul class="list-unstyled custom-social">
-							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+							<li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+							<li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
+							<li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
+							<li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
 						</ul>
 					</div>
 
