--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-5">
 						<div class="intro-excerpt">
-						<h1>Advanced Water Solutions You Can Trust,</span><span class="d-block">Creating a <br> Sustainable Future</span></h1>
+						<h1>Industrial Water Treatment Solutions</span><span class="d-block">India & UAE Supplier <br> of RO Systems & Chemicals</span></h1>
 							<!-- <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p> -->
 							<p>
 								<a href="Products.html" class="btn btn-secondary me-2">Products</a>
@@ -560,6 +560,23 @@
 			</div>
 		</div>
 		<!-- End Content Section -->
+
+		<!-- Start Additional Content Section -->
+		<div class="container pt-2 pb-4">
+			<div class="row">
+				<div class="col-lg-12">
+					<h3 class="mb-3">Water Treatment Solutions for Every Industry</h3>
+					<p class="mb-4">Genoasis offers comprehensive water treatment solutions tailored to meet the specific requirements of various industries. Our expertise extends to municipal water treatment plants, industrial process water systems, wastewater treatment facilities, and specialized applications such as desalination and water reclamation. We understand that each industry has unique challenges, whether it's achieving ultrapure water quality for pharmaceutical manufacturing, treating aggressive process water in petrochemical facilities, or meeting environmental discharge standards in wastewater treatment.</p>
+					
+					<h4 class="mb-3">Complete Product Range and Services</h4>
+					<p class="mb-4">Our extensive product catalog includes RO pressure vessels manufactured from high-grade FRP materials, membrane filtration systems for reverse osmosis, ultrafiltration, and nanofiltration applications, and comprehensive pump solutions ranging from standard centrifugal pumps to specialized metering and dosing pumps. We also stock a full line of water treatment chemicals including coagulants for particle removal, flocculants for settling enhancement, biocides for microbial control, antiscalants for membrane protection, and pH adjustment chemicals. Additionally, we supply filter housings, replacement cartridges, activated carbon, sand media, ion exchange resins, and automated control instrumentation.</p>
+					
+					<h4 class="mb-3">Technical Support and Project Management</h4>
+					<p class="mb-4">Beyond product supply, Genoasis delivers expert technical consulting, system design support, and project management services. Our experienced engineering team assists with plant layout, equipment selection, automation integration, and optimization of treatment processes. We provide startup assistance, operator training programs, and ongoing maintenance support to ensure optimal system performance. Our commitment extends to helping clients comply with environmental regulations, achieve cost-effective operations, and implement sustainable water management practices. Explore our <a href="Products.html">complete product catalog</a> or <a href="contact.html">contact our experts</a> for customized solutions.</p>
+				</div>
+			</div>
+		</div>
+		<!-- End Additional Content Section -->
 
 		<!-- Start Why Choose Us Section -->
 		<!-- <div class="why-choose-section">
