change banner text

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 				<div class="row justify-content-between">
 					<div class="col-lg-5">
 						<div class="intro-excerpt">
-						<h1>Industrial Water Treatment Solutions</span><span class="d-block">India & UAE Supplier <br> of RO Systems & Chemicals</span></h1>
+						<h1>Advanced Water Solutions You can Trust,</span><span class="d-block">Creating a<br>Sustainable Future</span></h1>
 							<!-- <p class="mb-4">Empowering water treatment plants with advanced chemicals and supplies for safe, sustainable water management. Innovative solutions for a healthier environment and a sustainable future.</p> -->
 							<p>
 								<a href="Products.html" class="btn btn-secondary me-2">Products</a>
