--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 							<li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
 							                            <li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
                             <li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
-                            <li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
+                            <li><a class="dropdown-item" href="pneumatic-products.html">Pneumatic Products</a></li>
                             <li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
                             <li><a class="dropdown-item" href="nanobubble-technology.html">Nanobubble Technology</a></li>
                             <li><a class="dropdown-item" href="dunnage-air-bags.html">Dunnage Air Bags</a></li>
@@ -544,7 +544,7 @@
 					<p class="mb-4">Genoasis specializes in cutting-edge water treatment technologies including atmospheric water generators, nanobubble systems, and advanced filtration media. Our chemical solutions portfolio includes coagulants, flocculants, biocides, scale inhibitors, and pH adjusters. We also supply essential equipment such as valves, couplings, fittings, filter cartridges, sand media, ion exchange resins, and instrumentation for complete water treatment facilities.</p>
 
 					<h3 class="mb-3">Industrial Expertise and Service</h3>
-					<p class="mb-4">With extensive experience in water treatment for power generation, petrochemical, food & beverage, and wastewater treatment applications, Genoasis provides technical expertise and reliable support. Our team offers comprehensive project management, installation guidance, and ongoing maintenance support. We partner with leading manufacturers including <a href="https://www.festo.com" target="_blank" rel="noopener">Festo</a> for industrial automation solutions and provide dunnage air bags for safe transportation of equipment. Learn about modern water treatment technologies from <a href="https://www.wateronline.com" target="_blank" rel="noopener">Water Online</a> and industrial filtration standards from <a href="https://www.ansi.org" target="_blank" rel="noopener">ANSI</a>.</p>
+					<p class="mb-4">With extensive experience in water treatment for power generation, petrochemical, food & beverage, and wastewater treatment applications, Genoasis provides technical expertise and reliable support. Our team offers comprehensive project management, installation guidance, and ongoing maintenance support. We partner with leading manufacturers including pneumatic products for industrial automation solutions and provide dunnage air bags for safe transportation of equipment. Learn about modern water treatment technologies and industrial filtration standards from <a href="https://www.ansi.org" target="_blank" rel="noopener">ANSI</a>.</p>
 					<p><a href="about.html" style="color: #006400; text-decoration: none; font-weight: bold;">Learn More About Genoasis →</a></p>
 				</div>
 				<div class="col-lg-5">
