--- a/about.html
+++ b/about.html
@@ -1047,7 +1047,7 @@
 								<li><a class="dropdown-item" href="instruments.html">Instruments & Lab Apparatus</a></li>
 								<li><a class="dropdown-item" href="disinfectants.html">Disinfection Products</a></li>
 								<li><a class="dropdown-item" href="valves.html">Valves, Couplings & Fittings</a></li>
-								<li><a class="dropdown-item" href="festo-products.html">Festo Products</a></li>
+								<li><a class="dropdown-item" href="pneumatic-products.html">Pneumatic Products</a></li>
 								<li><a class="dropdown-item" href="atmospheric-water-generators.html">Atmospheric Water Generators</a></li>
 								<li><a class="dropdown-item" href="dunnage-air-bags.html">Dunnage Air Bags</a></li>
 							</ul>
